2004-02-29  Scott Goodwin  <scott@scottg.net>

      * nsopenssl.h, nsopenssl.c, ssl.c: Added code to wait on sockets that
      have nothing ready to read or write. Stops these conns from hogging the
      CPU.

2004-02-16  Scott Goodwin  <scott@scottg.net>

      * nsopenssl.h, ssl.c: Fixed SSL read loop problem; improved processing
      path.

2004-02-15  Scott Goodwin  <scott@scottg.net>

      * ssl.c: Restructured SSL read and write loops; both now take into
      account incomplete reads and track buffer length.
      
      * nsopenssl.h, ssl.c, sslcontext.c: Added microsecond timers to the
      connection structure for OpenSSLTrace to output. This incurs no overhead
      when SSL handshake tracing is turned off. When handshake tracing is
      turned on, the trace output includes times in microseconds for each step
      relative to when the previous step completed. This will assist in doing
      performance analysis and tuning for a particular installation.

      * ssl.c, nsopenssl.h: Removed read/write attempt counts.

2004-02-13  Scott Goodwin  <scott@scottg.net>

      * ssl.c, nsopenssl.h: Added read and write attempt counts; if a conn
      read or write fails 1,000 in a row, we consider the conn dead and return
      an error. Hopefully this is a temporary fix until I can identify a
      better way to resolve this issue in the core server.

2004-01-19  Scott Goodwin  <scott@scottg.net>

      * Makefile: added kerberos headers to CFLAGS to resolve issue when
      OpenSSL has been compile with Kerberos support. This appears to be true
      if you're running RedHat 9, and possibly Fedora. Thanks to C.R. Oldham
      for this fix.

      * nsopenssl.h, nsopenssl.c, ssl.c: Removed rest of BIO stuff in lieu of
      straight SSL calls. Cleaned up NsOpenSSLConnHandshake().

2004-01-17  Scott Goodwin  <scott@scottg.net>

      * nsopenssl.h, ssl.c, tclcmds.c: Ripped out use of BIOs in